tests/sksl/errors/InterfaceBlockMemberReservedName.glsl

IB {
    float float;
} ib;
vec4 main() {
    return vec4(ib.float);
}
